added about to html style

--- a/index.html
+++ b/index.html
@@ -15,37 +15,19 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    .data-port-content{
-      width: 100%;
-      height: 100%;
-      min-height: 500px;
-      margin-top: 60px;
-    }
-    #entry{
-      font-size: 19px;
-      text-align: left;
-      color: rgb(80, 200, 120);
-      font-size: 2rem;
-      font-family:  Courier, "Lucida Console", "Courier New", monospace;
-    }
-    .topnav{
-      position: fixed;
-      top: 0;
-      width: 100%;
-    }
     .body-content{
       margin-left: 2rem;
     }
-    .footer{
+    .myfooter{
       background-size: cover;
       padding: 10px;
     }
-    .innerind{
-      color: blue;    
-    }
-    .restind{
-      color: beige;
+    .myabout{
+      color: bisque;
       font-size: 1.2rem;
+    } 
+    .about-bg{
+      padding-bottom: 1rem;
     }
   </style>
 </head>
@@ -398,7 +380,7 @@
             <span class="mycopy text-center">&copy; 2023 This is the property of Derrick Shibero </span>
           </div>
           <div class="col text-end">
-            <span class="mycopy text-end">Version 0.0.1</span>
+            <span class="mycopy text-end">Version 0.0.2</span>
           </div>
         </div>
       </footer>
