--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     .about-bg{
       padding-bottom: 1rem;
     }
+    .data-port-content{
+      width: 100%;
+      height: 100%;
+      min-height: 980px;
+      margin-top: 60px;
+    }
+    .skills-bg{
+      color: blanchedalmond;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 <body>
