--- a/index.html
+++ b/index.html
@@ -32,12 +32,30 @@
     .data-port-content{
       width: 100%;
       height: 100%;
-      min-height: 980px;
+      min-height: 740px;
       margin-top: 60px;
     }
     .skills-bg{
       color: blanchedalmond;
       font-size: 1.2rem;
+    }
+    .mycopy{
+      font-style: italic;
+      color: whitesmoke;
+      font-size: 13px;
+      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+      
+    .lower{
+      padding-top: 4px;
+    }
+      
+    .mydiv{
+      padding: 2px;
+    }
+    .first-bg, .second-bg{ 
+      color: azure; */
+      font-size: 2rem;
     }
   </style>
 </head>
