--- a/index.html
+++ b/index.html
@@ -15,48 +15,16 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    .body-content{
-      margin-left: 2rem;
-    }
-    .myfooter{
-      background-size: cover;
-      padding: 10px;
-    }
-    .myabout{
-      color: bisque;
-      font-size: 1.2rem;
-    } 
-    .about-bg{
-      padding-bottom: 1rem;
-    }
     .data-port-content{
       width: 100%;
       height: 100%;
       min-height: 600px;
       margin-top: 60px;
     }
-    .skills-bg{
-      color: blanchedalmond;
-      font-size: 1.2rem;
-    }
-    .mycopy{
-      font-style: italic;
-      color: whitesmoke;
-      font-size: 13px;
-      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    }
-      
-    .lower{
-      padding-top: 4px;
-    }
-      
-    .mydiv{
-      padding: 2px;
-    }
-    .first-bg, .second-bg{ 
-      color: azure; */
-      font-size: 2rem;
-    }
+    body{
+  background: linear-gradient(45deg, black, purple, green, blue) no-repeat;
+  font-family:  Arial, Helvetica, sans-serif;
+}
   </style>
 </head>
 <body>
