added .restind width

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
       min-height: 600px;
       margin-top: 60px;
     }
-    body{
-  background: linear-gradient(45deg, black, purple, green, blue) no-repeat;
-  font-family:  Arial, Helvetica, sans-serif;
-}
+    .restind{
+      width: 65%;
+    }
   </style>
 </head>
 <body>
