added table to myskills

--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
        <div id="skills" hidden>
         <div class="skills-bg">
           <div class="body-content">
+            <table>
+              <tr>
+                <td colspan="3">The Skills I posses are the following</td>
+              </tr>
+              <tr>
+                <td>Python</td>
+                <td>Javascript</td>
+                <td>Java</td>
+              </tr>
+              <tr>
+                <td>Php</td>
+                <td>C/C++</td>
+                <td>CSS</td>
+              </tr>
+              <tr>
+                <td>MongoDB</td>
+                <td>MySQL</td>
+                <td>SQLite3</td>
+              </tr>
+              <tr>
+                <td>HTML</td>
+                <td>Linux and Windows OS</td>
+                <td>Microsoft</td>
+              </tr>
+            </table>
             <p>I have skills in the following areas
               <ul> 
               <li> python 
