added the skills row

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     .restind{
       width: 65%;
     }
+    .skills-row{
+      border: outset;
+      margin: 5px;
+    }
   </style>
 </head>
 <body>
@@ -127,24 +131,24 @@
                 <td colspan="3">The Skills I posses are the following</td>
               </tr>
               <tr>
-                <td>Python</td>
-                <td>Javascript</td>
-                <td>Java</td>
+                <td class="skills-row">Python</td>
+                <td class="skills-row">Javascript</td>
+                <td class="skills-row">Java</td>
               </tr>
               <tr>
-                <td>Php</td>
-                <td>C/C++</td>
-                <td>CSS</td>
+                <td class="skills-row">Php</td>
+                <td class="skills-row">C/C++</td>
+                <td class="skills-row">CSS</td>
               </tr>
               <tr>
-                <td>MongoDB</td>
-                <td>MySQL</td>
-                <td>SQLite3</td>
+                <td class="skills-row">MongoDB</td>
+                <td class="skills-row">MySQL</td>
+                <td class="skills-row">SQLite3</td>
               </tr>
               <tr>
-                <td>HTML</td>
-                <td>Linux and Windows OS</td>
-                <td>Microsoft</td>
+                <td class="skills-row">HTML</td>
+                <td class="skills-row">Linux and Windows OS</td>
+                <td class="skills-row">Microsoft</td>
               </tr>
             </table>
             <p>I have skills in the following areas
