--- a/index.html
+++ b/index.html
@@ -131,7 +131,22 @@
                 <td colspan="3">The Skills I posses are the following</td>
               </tr>
               <tr>
-                <td class="skills-row">Python</td>
+                <td class="skills-row">
+                  <h3>Python</h3>
+                  <p>
+                    I am skilled in the following areas
+                    <ul>
+                      <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
+                      <li>data visualisation with matplotlib and seaborn</li>
+                      <li>web development with flask, fastapi and django </li>
+                      <li>database intergration in python with mysql, mongodb and sqlite3</li>
+                      <li>graphical user with kivy and tkinter </li>
+                      <li>language processing with NLTK and textblob</li>
+                      <li>image processing with opencv and pillow</li>
+                      <li>webscraping </li>
+                    </ul>
+                  </p>
+                </td>
                 <td class="skills-row">Javascript</td>
                 <td class="skills-row">Java</td>
               </tr>
