--- a/index.html
+++ b/index.html
@@ -147,8 +147,30 @@
                     </ul>
                   </p>
                 </td>
-                <td class="skills-row">Javascript</td>
-                <td class="skills-row">Java</td>
+                <td class="skills-row">
+                  <h3>Javascript</h3>
+                  <p>
+                    I am skilled in the following areas
+                    <ul>
+                      <li>Vanilla Javascript </li>
+                      <li>Express js</li>
+                      <li>Node js</li>
+                      <li>JQuery</li>
+                      <li>React js</li>
+                    </ul>
+                  </p>
+                </td>
+                <td class="skills-row">
+                  <h3>Java</h3>
+                  <p>
+                    I am skilled in the following areas
+                    <ul>
+                      <li>graphical user interface </li>
+                      <li>database intergration with mysql, mongodb and sqlite3</li>
+                      <li>android development </li>
+                    </ul>
+                  </p>
+                </td>
               </tr>
               <tr>
                 <td class="skills-row">Php</td>
@@ -168,18 +190,6 @@
             </table>
             <p>I have skills in the following areas
               <ul> 
-              <li> python 
-                <ul>
-                  <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
-                  <li>data visualisation with matplotlib and seaborn</li>
-                  <li>web development with flask, fastapi and django </li>
-                  <li>database intergration in python with mysql, mongodb and sqlite3</li>
-                  <li>graphical user with kivy and tkinter </li>
-                  <li>language processing with NLTK and textblob</li>
-                  <li>image processing with opencv and pillow</li>
-                  <li>webscraping </li>
-                </ul>
-              </li>
               <li>javascript 
                 <ul>
                   <li>vanilla javascript </li>
