--- a/index.html
+++ b/index.html
@@ -126,106 +126,108 @@
        <div id="skills" hidden>
         <div class="skills-bg">
           <div class="body-content">
-            <table>
-              <tr>
-                <td colspan="3">The Skills I posses are the following</td>
-              </tr>
-              <tr>
-                <td class="skills-row">
-                  <h3>Python</h3>
-                  <p>
-                    I am skilled in the following areas
-                    <ul>
-                      <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
-                      <li>data visualisation with matplotlib and seaborn</li>
-                      <li>web development with flask, fastapi and django </li>
-                      <li>database intergration in python with mysql, mongodb and sqlite3</li>
-                      <li>graphical user with kivy and tkinter </li>
-                      <li>language processing with NLTK and textblob</li>
-                      <li>image processing with opencv and pillow</li>
-                      <li>webscraping </li>
-                    </ul>
-                  </p>
-                </td>
-                <td class="skills-row">
-                  <h3>Javascript</h3>
-                  <p>
-                    I am skilled in the following areas
-                    <ul>
-                      <li>Vanilla Javascript </li>
-                      <li>Express js</li>
-                      <li>Node js</li>
-                      <li>JQuery</li>
-                      <li>React js</li>
-                    </ul>
-                  </p>
-                </td>
-                <td class="skills-row">
-                  <h3>Java</h3>
-                  <p>
-                    I am skilled in the following areas
-                    <ul>
-                      <li>graphical user interface </li>
-                      <li>database intergration with mysql, mongodb and sqlite3</li>
-                      <li>android development </li>
-                    </ul>
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <td class="skills-row">Php</td>
-                <td class="skills-row">C/C++</td>
-                <td class="skills-row">CSS</td>
-              </tr>
-              <tr>
-                <td class="skills-row">MongoDB</td>
-                <td class="skills-row">MySQL</td>
-                <td class="skills-row">SQLite3</td>
-              </tr>
-              <tr>
-                <td class="skills-row">HTML</td>
-                <td class="skills-row">Linux and Windows OS</td>
-                <td class="skills-row">Microsoft</td>
-              </tr>
-            </table>
-            <p>I have skills in the following areas
-              <ul> 
-              <li>javascript 
-                <ul>
-                  <li>vanilla javascript </li>
-                  <li>express js</li>
-                  <li>node js</li>
-                  <li>JQuery</li>
-                </ul>
-              </li>
-              <li>java 
-                <ul>
-                  <li>graphical user interface </li>
-                  <li>database intergration with mysql, mongodb and sqlite3</li>
-                  <li>android development </li>
-                </ul>
-              </li>
-              <li>php </li>
-              <li>c/c++</li>
-              <li> css 
+            <div hidden>
+              <table>
+                <tr>
+                  <td colspan="3">The Skills I posses are the following</td>
+                </tr>
+                <tr>
+                  <td class="skills-row">
+                    <h3>Python</h3>
+                    <p>
+                      I am skilled in the following areas
+                      <ul>
+                        <li>data science and machine learning with numpy, pandas and sci-kit learn </li>
+                        <li>data visualisation with matplotlib and seaborn</li>
+                        <li>web development with flask, fastapi and django </li>
+                        <li>database intergration in python with mysql, mongodb and sqlite3</li>
+                        <li>graphical user with kivy and tkinter </li>
+                        <li>language processing with NLTK and textblob</li>
+                        <li>image processing with opencv and pillow</li>
+                        <li>webscraping </li>
+                      </ul>
+                    </p>
+                  </td>
+                  <td class="skills-row">
+                    <h3>Javascript</h3>
+                    <p>
+                      I am skilled in the following areas
+                      <ul>
+                        <li>Vanilla Javascript </li>
+                        <li>Express js</li>
+                        <li>Node js</li>
+                        <li>JQuery</li>
+                        <li>React js</li>
+                      </ul>
+                    </p>
+                  </td>
+                  <td class="skills-row">
+                    <h3>Java</h3>
+                    <p>
+                      I am skilled in the following areas
+                      <ul>
+                        <li>graphical user interface </li>
+                        <li>database intergration with mysql, mongodb and sqlite3</li>
+                        <li>android development </li>
+                      </ul>
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="skills-row">Php</td>
+                  <td class="skills-row">C/C++</td>
+                  <td class="skills-row">CSS</td>
+                </tr>
+                <tr>
+                  <td class="skills-row">MongoDB</td>
+                  <td class="skills-row">MySQL</td>
+                  <td class="skills-row">SQLite3</td>
+                </tr>
+                <tr>
+                  <td class="skills-row">HTML</td>
+                  <td class="skills-row">Linux and Windows OS</td>
+                  <td class="skills-row">Microsoft</td>
+                </tr>
+              </table>
+              <p>I have skills in the following areas
                 <ul> 
-                  li vanilla css 
-                  li bootstrap
+                <li>javascript 
+                  <ul>
+                    <li>vanilla javascript </li>
+                    <li>express js</li>
+                    <li>node js</li>
+                    <li>JQuery</li>
+                  </ul>
+                </li>
+                <li>java 
+                  <ul>
+                    <li>graphical user interface </li>
+                    <li>database intergration with mysql, mongodb and sqlite3</li>
+                    <li>android development </li>
+                  </ul>
+                </li>
+                <li>php </li>
+                <li>c/c++</li>
+                <li> css 
+                  <ul> 
+                    li vanilla css 
+                    li bootstrap
+                  </ul>
+                </li>
+                <li>linux operating system like linux and windows</li>
+                <li>mongodb </li>
+                <li>mysql and sqlite3 </li>
+                <li>microsoft office 
+                  <ul>
+                    <li>excel spreadsheets</li>
+                    <li>microsoft word </li>
+                    <li>powerpoint presentation </li>
+                    <li>ms publisher  </li>
+                  </ul>
+                </li>
                 </ul>
-              </li>
-              <li>linux operating system like linux and windows</li>
-              <li>mongodb </li>
-              <li>mysql and sqlite3 </li>
-              <li>microsoft office 
-                <ul>
-                  <li>excel spreadsheets</li>
-                  <li>microsoft word </li>
-                  <li>powerpoint presentation </li>
-                  <li>ms publisher  </li>
-                </ul>
-              </li>
-              </ul>
-            </p>
+              </p>
+            </div>
           </div>
           <div class="text-center">
             <button type="button" class="btn btn-outline-info projectbtn">
