table and cards

--- a/index.html
+++ b/index.html
@@ -144,15 +144,93 @@ img {
        <div id="skills" hidden>
         <div class="skills-bg">
           <div class="body-content">
-            <div class="card">
+            <table>
+<!--             <div class="card">
               <img src="img_avatar2.png" alt="Avatar" style="width:100%">
               <div class="container-skills">
                 <h4><b>Jane Doe</b></h4> 
                 <p>Interior Designer</p> 
               </div>
-            </div>
+            </div> -->
+              <tr>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+              </tr>
+              <tr>
+                <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Jane Doe</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+              </tr>
+            </table>
             
-            <div hidden>
+<!--             <div hidden>
               <table>
                 <tr>
                   <td colspan="3">The Skills I posses are the following</td>
@@ -253,7 +331,7 @@ img {
                 </li>
                 </ul>
               </p>
-            </div>
+            </div> -->
           </div>
           <div class="text-center">
             <button type="button" class="btn btn-outline-info projectbtn">
