filled the data in the cards

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>Python</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
@@ -166,7 +166,7 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>JavaScript</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
@@ -175,7 +175,7 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>Java</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
@@ -186,7 +186,7 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>Php</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
@@ -195,7 +195,7 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>C/C++</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
@@ -204,29 +204,69 @@ img {
                   <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>CSS</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
                 </td>
               </tr>
-              <tr>
-                <div class="card">
+              <tr>                
+                <td>
+                  <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>MongoDB</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>MySQL</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>SQLite3</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
               </tr>
-              <tr>
-                <div class="card">
+              <tr>          
+                <td>
+                  <div class="card">
                     <img src="img_avatar2.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>Jane Doe</b></h4> 
+                      <h4><b>HTML</b></h4> 
                       <p>Interior Designer</p> 
                     </div>
                   </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Linux and Windows</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div class="card">
+                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Microsoft Office Suites</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>
               </tr>
             </table>
             
