added cart images

--- a/index.html
+++ b/index.html
@@ -145,13 +145,6 @@ img {
         <div class="skills-bg">
           <div class="body-content">
             <table>
-<!--             <div class="card">
-              <img src="img_avatar2.png" alt="Avatar" style="width:100%">
-              <div class="container-skills">
-                <h4><b>Jane Doe</b></h4> 
-                <p>Interior Designer</p> 
-              </div>
-            </div> -->
               <tr>
                 <td>
                   <div class="card">
@@ -164,7 +157,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/js logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>JavaScript</b></h4> 
                       <p>Interior Designer</p> 
@@ -173,7 +166,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/java logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Java</b></h4> 
                       <p>Interior Designer</p> 
@@ -184,7 +177,7 @@ img {
               <tr>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/php logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Php</b></h4> 
                       <p>Interior Designer</p> 
@@ -193,7 +186,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/cpp logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>C/C++</b></h4> 
                       <p>Interior Designer</p> 
@@ -202,7 +195,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/css logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>CSS</b></h4> 
                       <p>Interior Designer</p> 
@@ -213,7 +206,7 @@ img {
               <tr>                
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/mongo logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>MongoDB</b></h4> 
                       <p>Interior Designer</p> 
@@ -222,7 +215,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/mysql logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>MySQL</b></h4> 
                       <p>Interior Designer</p> 
@@ -231,7 +224,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/sqlite logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>SQLite3</b></h4> 
                       <p>Interior Designer</p> 
@@ -242,7 +235,7 @@ img {
               <tr>          
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/html logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>HTML</b></h4> 
                       <p>Interior Designer</p> 
@@ -251,7 +244,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/linux logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Linux and Windows</b></h4> 
                       <p>Interior Designer</p> 
@@ -260,7 +253,7 @@ img {
                 </td>
                 <td>
                   <div class="card">
-                    <img src="img_avatar2.png" alt="Avatar" style="width:100%">
+                    <img src="images/logos-programing/office logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Microsoft Office Suites</b></h4> 
                       <p>Interior Designer</p> 
