--- a/index.html
+++ b/index.html
@@ -15,15 +15,6 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    .data-port-content{
-      width: 100%;
-      height: 100%;
-      min-height: 500px;
-      margin-top: 60px;
-    }
-    .restind{
-      width: 65%;
-    }
     .skills-row{
       border: outset;
       margin: 5px;
@@ -146,7 +137,10 @@ img {
           <div class="body-content">
             <table>
               <tr>
-                <td>
+                <td colspan="3">The following are skills that I know</td>
+              </tr>
+              <tr>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/python-logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -155,7 +149,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/js logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -164,7 +158,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/java logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -175,7 +169,7 @@ img {
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/php logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -184,7 +178,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/cpp logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -193,7 +187,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/css logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -204,7 +198,7 @@ img {
                 </td>
               </tr>
               <tr>                
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/mongo logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -213,7 +207,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/mysql logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -222,7 +216,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/sqlite logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -233,7 +227,7 @@ img {
                 </td>
               </tr>
               <tr>          
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/html logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -242,7 +236,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/linux logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
@@ -251,7 +245,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="skills-row">
                   <div class="card">
                     <img src="images/logos-programing/office logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
