--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       border: outset;
       margin: 5px;
     }
+    .skills-row{
+/*   border: outset; */
+  margin: 10px;
+}
     .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
@@ -151,6 +155,15 @@ img {
                 </td>
                 <td class="skills-row">
                   <div class="card">
+                    <img src="images/logos-programing/java logo.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Java</b></h4> 
+                      <p>Interior Designer</p> 
+                    </div>
+                  </div>
+                </td>                
+                <td class="skills-row">
+                  <div class="card">
                     <img src="images/logos-programing/js logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>JavaScript</b></h4> 
@@ -158,15 +171,7 @@ img {
                     </div>
                   </div>
                 </td>
-                <td class="skills-row">
-                  <div class="card">
-                    <img src="images/logos-programing/java logo.jpg" alt="Avatar" style="width:100%">
-                    <div class="container-skills">
-                      <h4><b>Java</b></h4> 
-                      <p>Interior Designer</p> 
-                    </div>
-                  </div>
-                </td>
+
               </tr>
               <tr>
                 <td class="skills-row">
