--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
   <link rel="stylesheet" href="styles.css" />
   <style>
     .skills-row{
-      border: outset;
-      margin: 5px;
-    }
-    .skills-row{
 /*   border: outset; */
   margin: 10px;
 }
@@ -149,7 +145,14 @@ img {
                     <img src="images/logos-programing/python-logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Python</b></h4> 
-                      <p>Interior Designer</p> 
+                      <ul>
+                        <li>Webscraping</li>
+                        <li>GUI</li>
+                        <li>Machine Learning</li>
+                        <li>Data Visualisation</li>
+                        <li>Language Processing</li>
+                        <li>Image Processing</li>
+                      </ul>
                     </div>
                   </div>
                 </td>
@@ -158,7 +161,10 @@ img {
                     <img src="images/logos-programing/java logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Java</b></h4> 
-                      <p>Interior Designer</p> 
+                      <ul>
+                        <li>Swing</li>
+                        <li>Android</li>
+                      </ul> 
                     </div>
                   </div>
                 </td>                
@@ -167,11 +173,13 @@ img {
                     <img src="images/logos-programing/js logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>JavaScript</b></h4> 
-                      <p>Interior Designer</p> 
+                      <ul>
+                        <li>Vanilla js</li>
+                        <li>Front end</li>
+                      </ul> 
                     </div>
                   </div>
                 </td>
-
               </tr>
               <tr>
                 <td class="skills-row">
@@ -179,7 +187,6 @@ img {
                     <img src="images/logos-programing/php logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Php</b></h4> 
-                      <p>Interior Designer</p> 
                     </div>
                   </div>
                 </td>
@@ -188,7 +195,6 @@ img {
                     <img src="images/logos-programing/cpp logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>C/C++</b></h4> 
-                      <p>Interior Designer</p> 
                     </div>
                   </div>
                 </td>
@@ -196,8 +202,7 @@ img {
                   <div class="card">
                     <img src="images/logos-programing/css logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>CSS</b></h4> 
-                      <p>Interior Designer</p> 
+                      <h4><b>CSS</b></h4>  
                     </div>
                   </div>
                 </td>
@@ -208,7 +213,6 @@ img {
                     <img src="images/logos-programing/mongo logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>MongoDB</b></h4> 
-                      <p>Interior Designer</p> 
                     </div>
                   </div>
                 </td>
@@ -216,8 +220,7 @@ img {
                   <div class="card">
                     <img src="images/logos-programing/mysql logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>MySQL</b></h4> 
-                      <p>Interior Designer</p> 
+                      <h4><b>MySQL</b></h4>  
                     </div>
                   </div>
                 </td>
@@ -226,7 +229,6 @@ img {
                     <img src="images/logos-programing/sqlite logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>SQLite3</b></h4> 
-                      <p>Interior Designer</p> 
                     </div>
                   </div>
                 </td>
@@ -236,8 +238,7 @@ img {
                   <div class="card">
                     <img src="images/logos-programing/html logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>HTML</b></h4> 
-                      <p>Interior Designer</p> 
+                      <h4><b>HTML</b></h4>  
                     </div>
                   </div>
                 </td>
@@ -246,7 +247,10 @@ img {
                     <img src="images/logos-programing/linux logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Linux and Windows</b></h4> 
-                      <p>Interior Designer</p> 
+                      <ul>
+                        <li>Installation</li>
+                        <li>Use of the OS</li>
+                      </ul>
                     </div>
                   </div>
                 </td>
@@ -255,7 +259,13 @@ img {
                     <img src="images/logos-programing/office logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Microsoft Office Suites</b></h4> 
-                      <p>Interior Designer</p> 
+                      <ul>
+                        <li>Excel</li>
+                        <li>Publisher</li>
+                        <li>Word</li>
+                        <li>Powerpoint</li>
+                        <li>Access</li>
+                      </ul> 
                     </div>
                   </div>
                 </td>
