--- a/index.html
+++ b/index.html
@@ -270,6 +270,38 @@ img {
                   </div>
                 </td>
               </tr>
+              <tr>
+                <td colspan="3">Here are some of the frameworks and tools</td>
+              </tr>
+              <tr>
+                <td colspan="3">Python frameworks and tools</td>
+              </tr>
+              <tr>                
+                <td class="skills-row">
+                  <div class="card">
+                    <img src="images/frameworks/django logo.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Django</b></h4> 
+                    </div>
+                  </div>
+                </td>
+                <td class="skills-row">
+                  <div class="card">
+                    <img src="images/frameworks/flask logo.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Flask</b></h4>  
+                    </div>
+                  </div>
+                </td>
+<!--                 <td class="skills-row">
+                  <div class="card">
+                    <img src="images/logos-programing/sqlite logo.jpg" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>SQLite3</b></h4> 
+                    </div>
+                  </div>
+                </td> -->
+              </tr>
             </table>
             
 <!--             <div hidden>
