--- a/index.html
+++ b/index.html
@@ -287,20 +287,51 @@ img {
                 </td>
                 <td class="skills-row">
                   <div class="card">
-                    <img src="images/frameworks/flask logo.jpg" alt="Avatar" style="width:100%">
+                    <img src="images/frameworks/flask logo.png" alt="Avatar" style="width:100%">
                     <div class="container-skills">
                       <h4><b>Flask</b></h4>  
                     </div>
                   </div>
                 </td>
-<!--                 <td class="skills-row">
+              </tr>
+              <tr>
+                <td colspan="3">JavaScript frameworks and tools</td>
+              </tr>
+              <tr>                
+                <td class="skills-row">
                   <div class="card">
-                    <img src="images/logos-programing/sqlite logo.jpg" alt="Avatar" style="width:100%">
+                    <img src="images/frameworks/react logo.jpg" alt="Avatar" style="width:100%">
                     <div class="container-skills">
-                      <h4><b>SQLite3</b></h4> 
+                      <h4><b>React Js</b></h4> 
                     </div>
                   </div>
-                </td> -->
+                </td>
+                <td class="skills-row">
+                  <div class="card">
+                    <img src="images/frameworks/node logo.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Node Js</b></h4>  
+                    </div>
+                  </div>
+                </td>
+                <td class="skills-row">
+                  <div class="card">
+                    <img src="images/frameworks/express js.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>Express Js</b></h4> 
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td class="skills-row">
+                  <div class="card">
+                    <img src="images/frameworks/jquery logo.png" alt="Avatar" style="width:100%">
+                    <div class="container-skills">
+                      <h4><b>JQuery</b></h4> 
+                    </div>
+                  </div>
+                </td>
               </tr>
             </table>
             
