--- a/index.html
+++ b/index.html
@@ -15,28 +15,10 @@
   <title>Derrick Shibero Wakhu Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    .skills-row{
-/*   border: outset; */
-  margin: 10px;
-}
-    .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 80%;
-  border-radius: 5px;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-img {
-  border-radius: 5px 5px 0 0;
-}
-
-.container-skills {
-  padding: 2px 16px;
-}
+    #table-skills{
+      width: 100%;
+      display: flex;
+    }
   </style>
 </head>
 <body>
@@ -135,7 +117,7 @@ img {
        <div id="skills" hidden>
         <div class="skills-bg">
           <div class="body-content">
-            <table>
+            <table id="table-skills">
               <tr>
                 <td colspan="3">The following are skills that I know</td>
               </tr>
