--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
           <a href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user">
             <img src="images/facebook logo light.jpg", alt="facebook" class="social-images">
           </a>
-          <a href="">
+          <a href="https://ke.linkedin.com/in/derrick-wakhu-shibero-069ab6247">
             <img src="images/linkedin.jpg", alt="linkedin" class="social-images">
           </a>
          <a href="https://wa.me/+254114386583">
