--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
           <a href="https://github.com/blackwakhu">
             <img src="images/GitHub-logo.png", alt="github" class="social-images">
           </a>
-          <a href="">
+          <a href="https://twitter.com/ShiberoD">
             <img src="images/twitter logo light.jpg", alt="x" class="social-images">
           </a>
           <a href="https://www.facebook.com/people/Derrick-Shibero/pfbid02wSvbw24XdZcdXhztx8agZCr4pia9KhJtxqu6wEE59eGaTFUUZKN9cQS8o5Wia85Bl/?name=xhp_nt__fb__action__open_user">
