--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         </div>
       </footer>
     </div>
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
   <!-- jQuery code-->
   
 </body>
