--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           </div>
         </div>
         <div class="second-bg">
-          <div class="row">
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="port">This portfolio website</h1>
@@ -405,8 +405,8 @@
                   <a href="#footer"> Contacts ...</a>
               </p>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="python-phonebooke"> Python phonebook app </h1>
@@ -416,8 +416,8 @@
                   code is publicly available in my github repository. 
                   <a href="https://github.com/blackwakhu/python-phonebook-mongo"> link>></a>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="cpp-blackjack">C++ Black jack </h1>
@@ -427,8 +427,8 @@
                       <a href="https://github.com/blackwakhu/cpp-black-jack"> link>></a>
                   </p>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="cunit">C unit converter </h1>
@@ -444,8 +444,8 @@
                       While some values need to be adjusted like the currency, the rest are within the internation standards. 
                       <a href="https://github.com/blackwakhu/unit-converter-c"> link >></a>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="dictionary">Python dictionary </h1>
@@ -454,8 +454,8 @@
                       are sadly not available. But the backend technology used was flask.
                       <a href="https://github.com/blackwakhu/terminal-dictionary-python"> link >></a>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="phpstudent"> Php student registration </h1>
@@ -464,8 +464,8 @@
                       <a href="https://github.com/blackwakhu/StudentRegistration-php-sqlite3"> link>></a>
                   </p>
             </div>
-          </div> 
-          <div class="row">
+          </div>  -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="pythoncalculator"> Python calculator</h1>
@@ -474,8 +474,8 @@
                       <a href="https://github.com/blackwakhu/kivy_calculator"> link >></a>
                   </p>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7-">
               <h1 class="display-5" id="javalib"> Java library program </h1>
@@ -484,8 +484,8 @@
                       <a href="https://github.com/blackwakhu/libraryjava"> link>> </a>
                     </p>
             </div>
-          </div>
-          <div class="row">
+          </div> -->
+<!--           <div class="row">
             <div class="col3"></div>
             <div class="col-7">
               <h1 class="display-5" id="datascience"> Data science in python </h1>
@@ -510,7 +510,7 @@
                         </ul>
                     </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
