--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
               <div class="col-7">
                 <p>Over the course of time I have done many small projects which can easily be accessed in 
                   <a class="myproject-a" href="https://github.com/blackwakhu"> github page.</a> Some of the projects I have done include: 
-                  <ul >
+<!--                   <ul >
                     <li> 
                         <a class="myproject-a" href="#port">Portfolio website</a>
                         </li>
@@ -386,8 +386,30 @@
                     <li> 
                         <a class="myproject-a" href="#datascience">Data science in python</a>
                         </li>
-                  </ul>
+                  </ul> -->
                 </p>
+                <div>
+                  <dl>
+                    <dt>Coffee</dt>
+                    <dd>- black hot drink</dd>
+                    <dt>Milk</dt>
+                    <dd>- white cold drink</dd>
+                    <dt>Coffee</dt>
+                    <dd>- black hot drink</dd>
+                    <dt>Milk</dt>
+                    <dd>- white cold drink</dd>
+                    <dt>Coffee</dt>
+                    <dd>- black hot drink</dd>
+                    <dt>Milk</dt>
+                    <dd>- white cold drink</dd>
+                    <dt>Coffee</dt>
+                    <dd>- black hot drink</dd>
+                    <dt>Milk</dt>
+                    <dd>- white cold drink</dd>
+                    <dt>Coffee</dt>
+                    <dd>- black hot drink</dd>
+                  </dl>
+                </div>
               </div>
             </div>
           </div>
